# KRIA_KV260_Projects

AIStoDP/project_4/: kria_starter_kit.tcl  project_4.xpr
AIStoDP/project_4/project_4.cache/wt/: synthesis.wdf
AIStoDP/project_4/project_4.runs/.jobs/: vrs_config_1.xml  vrs_config_11.xml  vrs_config_12.xml  vrs_config_13.xml  vrs_config_2.xml  vrs_config_3.xml  vrs_config_4.xml  vrs_config_5.xml  vrs_config_6.xml  vrs_config_7.xml  vrs_config_8.xml
AIStoDP/project_4/project_4.runs/bd_a88d_phy_0_synth_1/: .vivado.begin.rst  bd_a88d_phy_0.dcp  bd_a88d_phy_0.tcl  bd_a88d_phy_0.vds  bd_a88d_phy_0_utilization_synth.pb  bd_a88d_phy_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
AIStoDP/project_4/project_4.runs/bd_a88d_r_sync_0_synth_1/: .vivado.begin.rst  bd_a88d_r_sync_0.tcl  bd_a88d_r_sync_0.vds  bd_a88d_r_sync_0_utilization_synth.pb  bd_a88d_r_sync_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
AIStoDP/project_4/project_4.runs/synth_1/: dont_touch.xdc  (+12 more)
AIStoDP/project_Scratch/: project_Scratch.xpr
IMX708toDP/project_2/: project_2.xpr
IMX708toDP/project_2/project_2.runs/design_1_v_gamma_lut_0_0_synth_1/prj/sol/impl/ip/drivers/design_1_v_gamma_lut_0_0_v_gamma_lut_v1_1/src/: CMakeLists.txt  xdesign_1_v_gamma_lut_0_0_v_gamma_lut_hw.h  xdesign_1_v_gamma_lut_0_0_v_gamma_lut_sinit.c
SpikingNeuralNetwork/: SpikingNeuralNetwork.xpr
SpikingNeuralNetwork/SpikingNeuralNetwork.cache/sim/: ssm.db
SpikingNeuralNetwork/SpikingNeuralNetwork.runs/.jobs/: vrs_config_5.xml
kv260_ispMipiRx_vmixDP/: kv260_ispMipiRx_vmixDP.tcl
(+5712 files in other folders)
